Created the post component to be used in the home page and also added the routes for the respective posts

--- a/src/app/components/content/content.component.scss
+++ b/src/app/components/content/content.component.scss
@@ -4,3 +4,10 @@
   align-items: flex-start;
   flex-direction: column;
 }
+
+.post {
+  margin: 15px 0 15px 0;
+  width: 100%;
+
+  cursor: pointer;
+}
