--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,5 @@
-<div class="header-container"></div>
+<div class="header-container" (click)="navigateToHomePage()">
+  <div class="home-container">
+    <div class="home-button">Home</div>
+  </div>
+</div>
