--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -1,7 +1,5 @@
 <div class="center">
-  <div *ngFor="let post of allPosts">
-    <p>{{ post.title }}</p>
-    <p>{{ post.description }}</p>
-    <p>{{ post.author }}</p>
+  <div *ngFor="let post of posts" class="post">
+    <app-post [post]="post"></app-post>
   </div>
 </div>
