--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,5 +1,40 @@
 .header-container {
   width: 100%;
   height: 50px;
-  background-color: lightgrey;
+  background-color: var(--background-dark-grey);
+
+  border-top: 1px solid var(--border-color-grey);
+  border-bottom: 1px solid var(--border-color-grey);
+}
+
+.home-container {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+
+  height: 100%;
+}
+
+.home-button {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+
+  padding-left: 20px;
+  padding-right: 20px;
+  height: 100%;
+
+  font-weight: 700;
+  color: var(--post-title-color);
+  cursor: pointer;
+
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+
+.home-button:hover {
+  background-color: var(--background-grey);
+  border-color: 2px solid var(--border-color-light-grey);
 }
