--- a/src/app/components/detailed-post/detailed-post.component.html
+++ b/src/app/components/detailed-post/detailed-post.component.html
@@ -4,9 +4,25 @@
     <p>{{ post.title }}</p>
     <div>Posted by {{ post.author }} at {{ post.publish_date }}</div>
   </div>
-  <p>{{ post.description }}</p>
 
-  <div class="post-content" *ngIf="false">
+  <div class="post-content">
     <p [innerHTML]="post?.content"></p>
   </div>
+
+  <br />
+
+  <app-comment-form
+    submitLabel="Write"
+    (handleCommentSubmit)="addComment({ comment: $event, parentId: null })"
+  ></app-comment-form>
+
+  <app-comment
+    *ngFor="let comment of comments"
+    [comment]="comment"
+    [replies]="getReplies(comment)"
+    [activeComment]="activeComment"
+    (setAsActiveComment)="setAsActiveComment($event)"
+    (addComment)="addComment($event)"
+    >{{ comment.content }}</app-comment
+  >
 </div>
