--- a/src/app/components/detailed-post/detailed-post.component.scss
+++ b/src/app/components/detailed-post/detailed-post.component.scss
@@ -1,3 +1,16 @@
 .post-container {
   width: 700px;
 }
+
+textarea {
+  width: 100%;
+  height: 150px;
+  margin: 12px 20px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  font-size: 16px;
+  resize: none;
+}
