--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
   --background-black-default: black;
   --background-dark-grey: #141415;
   --background-grey: #2e2e2e;
+  --background-light-grey: #e0e0e0;
 
   --border-color-grey: #343536;
   --border-color-light-grey: #929292;
