Created the tests for the components and added mor icons at the header

--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -1,4 +1,5 @@
 <div class="center">
+  <span *ngIf="!posts" class="error-message">{{ EmptyPostsMessage }}</span>
   <div *ngFor="let post of posts" class="post">
     <app-post [post]="post"></app-post>
   </div>
