--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,4 +2,22 @@
   <div class="home-container">
     <div class="home-button">Home</div>
   </div>
+
+  <div class="social-media">
+    <a href="https://www.reddit.com/r/ProgrammerHumor/">
+      <span>
+        <img class="social-media-icon" src="assets/reddit.ico" />
+      </span>
+    </a>
+    <a href="https://www.instagram.com/letsgetchecked/?hl=pt">
+      <span>
+        <img class="social-media-icon" src="assets/instagram.ico" />
+      </span>
+    </a>
+    <a href="https://www.linkedin.com/in/joao-valada-6993a7173/">
+      <span>
+        <img class="social-media-icon" src="assets/linkedin.ico" />
+      </span>
+    </a>
+  </div>
 </div>
